# clautism

./: .env.example  .gitignore  README.md  README_SARCASTIC.md  pyproject.toml  requirements.txt
birthday_flow/: __init__.py  __main__.py  config.py  flow.py  people.py  prompt.py  relations.py
birthday_flow/channels/: __init__.py  base.py  console.py  telegram.py
data/: people.example.json
docs/: index.html
tests/: test_channels.py  test_flow.py  test_people.py
