[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clautism-birthday-flow"
version = "0.1.0"
description = "Local birthday flow: detect birthdays and send relation-aware wishes via pluggable channels, powered by Ollama + Stagehand."
requires-python = ">=3.11"
dependencies = [
    "stagehand-ai>=0.7.0",
    "telethon>=1.36",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
birthday-flow = "birthday_flow.__main__:main"

[tool.setuptools.packages.find]
include = ["birthday_flow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
